expose api constant to templates

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <template class=pokemon-preview>
     <article>
-        <img src=http://pokeapi.co/media/img/${national_id}.png alt=${name}>
+        <img src=${api}/media/img/${national_id}.png alt=${name}>
         <h1>${name}</h1>
         <ul>@{types as pokemon-type}</ul>
     </article>
