--- a/index.html
+++ b/index.html
@@ -17,4 +17,6 @@
     </article>
 </template>
 <header>Pokedex</header>
-<main></main><button class="load-more">Load more</button>
+
+<button class=load-more>Load more</button>
+<progress class=is-loading hidden></progress>
