--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang=en>
 <title>Pokedex</title>
 <meta charset=utf-8>
+<link rel=stylesheet href=reset.css>
 <link rel=stylesheet href=index.css>
 <script src=index.js defer></script>
 
