drop compose helper

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
         <ul>@{types as type}</ul>
     </article>
 </template>
+
 <header>Pokedex</header>
+<main></main>
 
 <button class=load-more>Load more</button>
 <progress class=is-loading hidden></progress>
