--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <template data-is=preview>
     <article>
-        <img src=${api}/media/img/${national_id}.png alt=${name}>
+        <img src=${api}/media/img/${pkdx_id}.png alt=${name}>
         <h1>${name}</h1>
         <ul>@{types as type}</ul>
     </article>
