--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset=utf-8>
 <link rel=stylesheet href=reset.css>
 <link rel=stylesheet href=index.css>
+<script src=dialog.js async></script>
 <script src=index.js defer></script>
 
 <template data-for=type>
