implement dialog close button

--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
 <header>Pokedex</header>
 <main></main>
 
-<dialog class=pokedex-details></dialog>
+<dialog class=pokedex-details>
+    <button class=close>x</button>
+</dialog>
+
 <button class=pokedex-load>
     Load more
     <progress hidden></progress>
