--- a/index.html
+++ b/index.html
@@ -6,12 +6,10 @@
 <link rel=stylesheet href=index.css>
 <script src=dialog.js async></script>
 <script src=index.js defer></script>
+<script src=pokedex-filter.js async></script>
 
 <template data-for=type>
-    <li>
-        <button is=pokedex-type kind=${name}>
-            ${name}
-        </button>
+    <li><pokedex-filter type=${name}></pokedex-filter>
 </template>
 
 <template data-for=preview>
