--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel=stylesheet href=index.css>
 <script src=dialog.js async></script>
 <script src=index.js defer></script>
+<script src=pokedex-card.js async></script>
 <script src=pokedex-filter.js async></script>
 
 <template data-for=type>
@@ -13,11 +14,11 @@
 </template>
 
 <template data-for=preview>
-    <article is=pokedex-card number=${pkdx_id}>
+    <pokedex-card number=${pkdx_id}>
         <img src=${api}/media/img/${pkdx_id}.png alt=${name}>
         <h1>${name} #${pkdx_id}</h1>
         <ul>@{types as type}</ul>
-    </article>
+    </pokedex-card>
 </template>
 
 <template data-for=details>
