--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <link rel=stylesheet href=index.css>
 <script src=dialog.js async></script>
 <script src=index.js defer></script>
+<script src=pokedex-main.js async></script>
 <script src=pokedex-card.js async></script>
 <script src=pokedex-filter.js async></script>
 
