add clicked attribute

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 <pokedex-main container=section template=card>
     <section></section>
-    <button is=pokedex-load>Load more</button>
+    <button is=pokedex-load clicked>Load more</button>
 </pokedex-main>
 
 <dialog class=pokedex-details>
